Fixed footer overlapping content.

--- a/css/footer.css
+++ b/css/footer.css
@@ -7,7 +7,7 @@ html {
 	position: relative;
 	display: inline-block;
 	width: 100%;
-	height: 10px;
+	height: 50px;
 }
 
 .footer-content {
