--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,7 @@ body {
 	width: 100%;
 	height: 100%;
 	overflow-x: hidden;
+	overflow-y: visible;
 	/* Prevent content from going under navbar */
 	padding-top: 40px;
 }
